focus style on borderless + border-radius variable + fix message alignment text from login

--- a/content/scss/_c-button.scss
+++ b/content/scss/_c-button.scss
@@ -94,11 +94,11 @@ input.c-button {
 }
 
 .c-button:not(.c-button--icon) .o-svg-icon:first-child {
-  margin-left: -0.2rem;
+  margin-left: -0.1rem;
 }
 
 .c-button:not(.c-button--icon) .o-svg-icon:last-child {
-  margin-right: -0.2rem;
+  margin-right: -0.1rem;
 }
 
 // Different spacing for carets
